# T2-Tarkov-Toolbox

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  PROJECT_ARCHITECTURE.md  PROJECT_CHECKLIST.md  QUICK_START.md  README.md  README_zh.md  WORKFLOW.md  apply-all-fixes.mjs  apply-filter-fix.ps1  apply-fix.js  apply-fix.mjs  build-installer.bat  build-portable.bat  build-release.bat  dev.ps1  gamma_controller.py  index.html  main.py  main.spec  models.py  package-lock.json  package.json  preset_manager.py  requirements.txt  screen-filter-ui-fix.patch  step1.ps1  test_value_mapper.py  validate_ranges.rs  version.py
.claude/: COLLABORATION_GUIDE.md  README.md  context.md  settings.local.json
.claude/skills/: skill-rules.json
config/: app_config.example.json  filter_config.example.json
docs/: AFFINE_TRANSFORM_FIX.md  API_GUIDE.md  BUILD_SETUP.md  CONFIG_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  FEATURE_MODULES.md  IMPLEMENTATION_STATUS.md  LOCAL_MAP_DESIGN.md  LOCAL_MAP_USER_GUIDE.md  OVERLAY_REFACTOR.md  POSITION_TRACKING_GUIDE.md  SCREENSHOT_GUIDE.md  SCREEN_FILTER_DESIGN.md
locales/: __init__.py  en_US.json  zh_CN.json
modules/: __init__.py
python_src/: filter_presets.json  probe_limits.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: filter.rs  mod.rs
src-tauri/src/filter/: gamma_ramp.rs  manager.rs  mod.rs  monitor.rs  types.rs
ui/: main_window.py
utils/: __init__.py  global_config.py  hotkey_manager.py  i18n.py  path_manager.py  version_checker.py
(+28 files in other folders)
