[package]
name = "t2-tarkov-toolbox"
version = "0.1.0"
description = "T2 塔科夫工具箱 - 本地桌面应用"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 请求
reqwest = { version = "0.11", features = ["json"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# EXIF 元数据解析
kamadak-exif = "0.5"

# 文件系统监控
notify = "6.1"

# 数据库（可选，用于缓存）
rusqlite = { version = "0.30", features = ["bundled"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.7", features = ["v4", "serde"] }
tauri-plugin-global-shortcut = "2.3.1"

# Windows API (仅 Windows 平台)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_System_LibraryLoader",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
